@@ -60,3 +60,5 @@ WRITE_MEDIA = floppy
 # pkg-lists is still sorted by type, so we have to provide
 # some mapping MEDIUM -> TYPE
 TYPE = $(MEDIUM)
+
+MANIFEST-INITRD_LIST = "contents of initrd"
