@@ -10,6 +10,8 @@ debian-installer (20040531) UNRELEASED; urgency=low
     - Move $(TREE)/usr/lib/kernel-image-$(KERNELVERSION) out of the way to
       $(TEMP)/lib when building boot images. powerpc subarchitectures that
       need to use mkvmlinuz should now be able to do so.
+    - For every initrd, output an initrd.list file containing the packages
+      and their versions used to construct it.
   * Joey Hess
     - Split out a new cyrllic root floppy on i386 as the regular root floppy
       is full again.
